<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ClonReddit"
    tools:context=".fragments.RegisterFragment"
    android:background="@color/bg">

    <!--INIT TOP BAR-->
    <ImageView
        android:id="@+id/closeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/X.close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/icnIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/reddit_share_circle_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/Theme.ClonReddit.LogReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--FINISH TOP BAR-->



    <!--INIT FORM-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBTN">

        <!--TITLE-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleForm"
            style="@style/Theme.ClonReddit.TitulosForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />


        <!--TEXT PRIVACY-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/policyUserTextView"
            style="@style/Theme.ClonReddit.SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyText"
            android:textSize="15sp" />

        <!--CHECK BOX-->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxRegisterForm"
            style="@style/Theme.ClonReddit.CheckForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptCheckBoxForm" />


        <!--INIT BLUE BUTTONS-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLoginBTN"
            style="@style/BlueButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueGoogle"
            app:icon="@drawable/google_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appleLoginBTN"
            style="@style/BlueButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueApple"
            app:icon="@drawable/apple_icon" />
        <!--FINISH BLUE BUTTONS-->


        <!--INIT OR LINES-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/lineLeft"
                style="@style/LineStyle"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                style="@style/Theme.ClonReddit.SimpleText"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginTop="5dp"
                android:text="@string/or"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/lineRight"
                style="@style/LineStyle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialTextView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--FINISH OR LINES-->


        <!--INIT FORM CAMPS-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/FormStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/FormStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/FormStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <!--FINISH FORM CAMPS-->
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBTN"
        style="@style/ContinueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/continueButton"/>
    <!--FINISH FORM-->

</androidx.constraintlayout.widget.ConstraintLayout>