...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueApple"
            app:icon="@drawable/apple_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailHomeScreenButton"
            style="@style/HomeScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueEmail"
            app:icon="@drawable/ic_baseline_email_24" />

...
                style="@style/Theme.ClonReddit.RedditorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redditor" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginHomeScreen"
                style="@style/Theme.ClonReddit.RedditorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textStyle="bold" />
...
