<?xml version="1.0" encoding="utf-8"?>


    <com.google.android.material.navigation.NavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/navigation_drawer_menu"
        app:itemIconTint="@color/grey"
        app:itemTextColor="@color/grey"
        android:background="@color/itemDrawerBG">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="8dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/drawerSettingsButton"
                style="@style/postMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:icon="@drawable/ic_baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/logOutButton"
                style="@style/postButton"
                android:src="@drawable/ic_baseline_logout_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

